2006-05-09  Li Guanglei <guanglei@cn.ibm.com>
	PR 2647
	* runtime/vsprintf.c: %0s support to print null-terminated string
	
2006-05-08  Li Guanglei <guanglei@cn.ibm.com>
	PR 2627
	* elaborate.cxx: epilogue style alias expansion
	* parse.cxx: parse += alias definition
	* staptree.h: add epilogue_style member to probe_alias
	* stap.1.in: add the description of epilogue style alias
	* testsuite/parseok/fifteen.stp: testcase for epilogue style alias

2006-05-05  Roland McGrath  <roland@redhat.com>

	* configure.ac (build_elfutils): Pass CFLAGS to elfutils configure,
	editting out -Wall.
	* configure: Regenerated.

2006-05-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 2643
	* testsuite/buildok/syscalls.stp: Take "-u" away again.
	* configure.ac, systemtap.spec.in: Bump version to 0.5.7.
	* configure: Regenerated.

2006-05-05  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac, systemtap.spec.in: Bump version to 0.5.6.
	* configure: Regenerated.

2006-05-05  Will Cohen  <wcohen@redhat.com>

	* small_demos/fileopen.stp: Shows use of target() to look at pid.
	* small_demos/rwtiming.stp: Shows per executable histograms of time
	spent in read and write system calls.

2006-05-05  Eugene Teo  <eteo@redhat.com>

	PR 2433
	* tapsets.cxx (dwarf_query::blacklisted_p): Extend the list of
	blacklisted .return probes to include "do_exit". Correct funcname
	typo for "sys_groupexit".
	* tapset/syscalls.stp: Remove .return probe aliases of never-
	returning syscall.exit and syscall.exit_group calls.

2006-05-05  David Smith  <dsmith@redhat.com>

	* translate.cxx (mapvar::exists): Added code for string array
	handling.  Otherwise, string array elements always exist.

2006-05-03  Josh Stone  <joshua.i.stone@intel.com>

	PR 2506
	* tapsets.cxx (dwarf_query::blacklisted_p): skip probes in .exit.*

2006-05-02  Will Cohen  <wcohen@redhat.com>

	* translate.cxx (emit_module_init): Move closing '}' inside #ifdef.

2006-05-02  Will Cohen  <wcohen@redhat.com>

	PR 2228